--- a/JupyterAlgebraTest.ipynb
+++ b/JupyterAlgebraTest.ipynb
@@ -172,7 +172,7 @@
     }
    ],
    "source": [
-    "# Solve for w\n",
+    "# Solve for x\n",
     "sol = solve((eq),(x))\n",
     "\n",
     "# Output\n",
