--- a/JupyterAlgebraTest.ipynb
+++ b/JupyterAlgebraTest.ipynb
@@ -203,7 +203,9 @@
     "The \"inverse\" of the linear interpolation formula!\n",
     "\n",
     "Easy enough to do by hand, but for demonstration purposes...\n",
-    "Could be useful."
+    "\n",
+    "\n",
+    "This could be useful."
    ],
    "cell_type": "markdown",
    "metadata": {}
